--- a/react/frontend/public/index.html
+++ b/react/frontend/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-adsense-account" content="ca-pub-1117993392594051">
     <title>Birthday Card Maker</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1117993392594051"
      crossorigin="anonymous"></script>
